tests/baselines/reference/parserSymbolIndexer3.errors.txt
tests/cases/conformance/parser/ecmascript6/Symbols/parserSymbolIndexer3.ts(2,5): error TS1145: Modifiers not permitted on index signature members.


==== tests/cases/conformance/parser/ecmascript6/Symbols/parserSymbolIndexer3.ts (1 errors) ====
    class C {
        static [s: symbol]: string;
        ~~~~~~
!!! error TS1145: Modifiers not permitted on index signature members.
    }